--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
 
 @layer base {
   :root {
+    --font-sans: "Instrument Sans", sans-serif;
     --background: 0 0% 100%;
     --foreground: 0 0% 20%;
     --card: 0 0% 100%;
@@ -84,5 +85,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: var(--font-sans);
   }
 }
